--- a/language.html
+++ b/language.html
@@ -2,120 +2,141 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BAYU RIFKI ALGHIFARI</title>
-  <meta name="description" content="-----">
-  <meta name="keywords" content="-----">
-  <meta name="author" content="------">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>BAYU RIFKI ALGHIFARI</title>
+	<meta name="description" content="-----">
+	<meta name="keywords" content="-----">
+	<meta name="author" content="------">
 
-  <!-- Font Awesome if you need it -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
- 
-  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/> 
-  <!--Replace with your tailwind.css once created-->
+	<!-- Font Awesome if you need it -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+	<script type="text/javascript"
+		src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+	<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
+	<!--Replace with your tailwind.css once created-->
 
 </head>
 
-<body class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover" style="background-image:url('./images/bg.webp');">
+<body class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover"
+	style="background-image:url('./images/bg.webp');">
 
 
 
-  <div class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
-    
-	<!--Main Col-->
-	<div id="profile" class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
-	
+	<div class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
 
-		<div class="p-4 md:p-12 text-center lg:text-left">
-			<!-- Image for mobile view-->
-			<div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center border-solid border-2 border-neutral-400" style="background-image: url('https://i.ibb.co/M16MfGq/eenmbl63ba054qhulm0cghk6j2721563final-1.jpg')"></div>
+		<!--Main Col-->
+		<div id="profile"
+			class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
 
-			<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-center">
-				<a href="./index.html" class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
-				  Home
-				</a> 
-				<a href="#" class="bg-green-900 text-white font-bold py-2 px-4 rounded-full">
-				  Language
-				</a> 
+
+			<div class="p-4 md:p-12 text-center lg:text-left">
+				<!-- Image for mobile view-->
+				<div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center border-solid border-2 border-neutral-400"
+					style="background-image: url('https://i.ibb.co/M16MfGq/eenmbl63ba054qhulm0cghk6j2721563final-1.jpg')">
+				</div>
+
+				<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-center">
+					<a href="./index.html"
+						class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
+						Home
+					</a>
+					<a href="#" class="bg-green-900 text-white font-bold py-2 px-4 rounded-full">
+						Language
+					</a>
+				</div>
+
+				<div class="pt-8"></div>
+				<div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-green-500 opacity-25"></div>
+				<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i
+						class="fab fa-js-square"></i> &nbsp; JavaScript</p>
+				<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i
+						class="fab fa-vuejs"></i> &nbsp; Vue</p>
+				<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i
+						class="fab fa-node"></i> &nbsp; NodeJs</p>
+				<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i
+						class="fab fa-php"></i> &nbsp; PHP</p>
+				<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i
+						class="fab fa-laravel"></i> &nbsp; Laravel</p>
+				<div class="pt-12 pb-8">
+					<a target="_blank" href="https://t.me/bayurifkialgh"
+						class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
+						Get In Touch
+					</a>
+				</div>
+
+				<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-center">
+					<a class="link" target="_blank" href="https://github.com/BayuRifkiAlghifari"
+						data-tippy-content="@BayuRifkiAlghifari"><svg
+							class="h-6 fill-current text-gray-600 hover:text-green-700" role="img" viewBox="0 0 24 24"
+							xmlns="http://www.w3.org/2000/svg">
+							<title>GitHub</title>
+							<path
+								d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+						</svg></a>
+				</div>
+
+				<!-- Use https://simpleicons.org/ to find the svg for your preferred product -->
+
 			</div>
-			
-			<div class="pt-8"></div>
-			<div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-green-500 opacity-25"></div>
-			<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i class="fab fa-js-square"></i> &nbsp; JavaScript</p>
-			<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i class="fab fa-vuejs"></i> &nbsp; Vue</p>
-			<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i class="fab fa-node"></i> &nbsp; NodeJs</p>
-			<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i class="fab fa-php"></i> &nbsp; PHP</p>
-			<p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><i class="fab fa-laravel"></i> &nbsp; Laravel</p>
-			<div class="pt-12 pb-8">
-				<a target="_blank" href="https://t.me/bayurifkialgh" class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
-				  Get In Touch
-				</a> 
-			</div>
-
-			<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-center">
-				<a class="link" target="_blank" href="https://github.com/BayuRifkiAlghifari" data-tippy-content="@BayuRifkiAlghifari"><svg class="h-6 fill-current text-gray-600 hover:text-green-700" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg></a>
-			</div>
-			
-			<!-- Use https://simpleicons.org/ to find the svg for your preferred product --> 
 
 		</div>
 
-	</div>
-	
-	<!--Img Col-->
-	<div class="w-full lg:w-2/5">
-		<!-- Big profile image for side bar (desktop) -->
-		<img src="https://i.ibb.co/xgZqRkL/eenmbl63ba054qhulm0cghk6j2445011final-1.jpg" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block border-solid border-2 border-neutral-400">
-		<!-- Image from: http://unsplash.com/photos/MP0IUfwrn0A -->
-		
-	</div>
-	
-	
-	<!-- Pin to top right corner -->
-	  <div class="absolute top-0 right-0 h-12 w-18 p-4">
-		<button class="js-change-theme focus:outline-none">🌙</button>
-	  </div>
+		<!--Img Col-->
+		<div class="w-full lg:w-2/5">
+			<!-- Big profile image for side bar (desktop) -->
+			<img src="https://i.ibb.co/xgZqRkL/eenmbl63ba054qhulm0cghk6j2445011final-1.jpg"
+				class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block border-solid border-2 border-neutral-400">
+			<!-- Image from: http://unsplash.com/photos/MP0IUfwrn0A -->
 
-</div>
+		</div>
 
+
+		<!-- Pin to top right corner -->
+		<div class="absolute top-0 right-0 h-12 w-18 p-4">
+			<button class="js-change-theme focus:outline-none">🌙</button>
+		</div>
+
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+		integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@4"></script>
 	<script>
 		//Init tooltips
-		tippy('.link',{
-		  placement: 'bottom'
+		tippy('.link', {
+			placement: 'bottom'
 		})
 
 		//Toggle mode
 		const toggle = document.querySelector('.js-change-theme');
 		const body = document.querySelector('body');
 		const profile = document.getElementById('profile');
-		
-		
+
+
 		toggle.addEventListener('click', () => {
 
-		  if (body.classList.contains('text-gray-900')) {
+			if (body.classList.contains('text-gray-900')) {
 				toggle.innerHTML = "☀️";
 				body.classList.remove('text-gray-900');
 				body.classList.add('text-gray-100');
 				profile.classList.remove('bg-white');
 				profile.classList.add('bg-gray-900');
-		  } 
-		  else
-		  {
+			}
+			else {
 				toggle.innerHTML = "🌙";
 				body.classList.remove('text-gray-100');
 				body.classList.add('text-gray-900');
-				profile.classList.remove('bg-gray-900');			
+				profile.classList.remove('bg-gray-900');
 				profile.classList.add('bg-white');
-		  }
+			}
 		});
-		
-    </script>
-	
+
+	</script>
+
 </body>
 
 </html>
