--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@
 					style="background-image: url('https://i.ibb.co/M16MfGq/eenmbl63ba054qhulm0cghk6j2721563final-1.jpg')">
 				</div>
 
-				<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-center">
-					<a href="#" class="bg-green-900 text-white font-bold py-2 px-4 rounded-full">
-						Home
-					</a>
-					<a href="./language.html"
-						class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
-						Language
-					</a>
+				<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-center"
+					id="header">
+
 				</div>
 
 				<h1 class="text-3xl font-bold pt-8 lg:pt-0">BAYU RIFKI ALGHFIARI</h1>
@@ -67,25 +62,10 @@
 					am open with collaboration in open source. Fell free to contact me.
 				</p>
 
-				<div class="pt-12 pb-8">
-					<a target="_blank" href="https://t.me/bayurifkialgh"
-						class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
-						Get In Touch
-					</a>
-				</div>
 
-				<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-center">
-					<a class="link" target="_blank" href="https://github.com/BayuRifkiAlghifari"
-						data-tippy-content="@BayuRifkiAlghifari"><svg
-							class="h-6 fill-current text-gray-600 hover:text-green-700" role="img" viewBox="0 0 24 24"
-							xmlns="http://www.w3.org/2000/svg">
-							<title>GitHub</title>
-							<path
-								d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
-						</svg></a>
-				</div>
+				<div id="footer">
 
-				<!-- Use https://simpleicons.org/ to find the svg for your preferred product -->
+				</div>
 
 			</div>
 
@@ -108,8 +88,8 @@
 
 	</div>
 
-	<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-		integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@4"></script>
 	<script>
@@ -140,6 +120,11 @@
 				profile.classList.remove('bg-gray-900');
 				profile.classList.add('bg-white');
 			}
+		});
+
+		$(() => {
+			$('#header').load('shared/header.html')
+			$('#footer').load('shared/footer.html')
 		});
 
 	</script>
