--- a/shared/header.html
+++ b/shared/header.html
@@ -4,3 +4,6 @@
 <a href="./language.html" class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
     Language
 </a>
+<a href="./portfolio.html" class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
+    Portfolio
+</a>
